Fix some css cus it was a bit too much on big tables but i also needed to fix actions button cus the prvious fix i made broke this one and i needed to do hotfix to disable griview on actions button class or else it would overflow out of table and make the previous changes useless

--- a/static/styles/admin.css
+++ b/static/styles/admin.css
@@ -13,6 +13,9 @@
     border-right: 1px solid #4f4f4f;
     align-items: center;
     text-align: center;
+    padding: 0.5rem;
+    min-width: fit-content;
+    white-space: nowrap;
 }
 
 .listsection tr > td:last-child, .listsection tr > th:last-child {
@@ -118,15 +121,9 @@
 }
 
 .actionbtn {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    padding: 0.2rem 1rem;
-}
-
-.actionbtn > * > button {
-    width: 100%;
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
 }
 
 .manageinfos {
@@ -205,6 +202,7 @@
     padding: 1rem;
     backdrop-filter: brightness(0.6);
     gap: 1rem;
+    min-width: 0;
 }
 
 .listbtn {
